examples/test/testpolicy6259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6259
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key45: value14
      key37: value44
      key23: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
      podSelector:
        matchLabels:
          key5: value10
